--- a/views/multimedia.html
+++ b/views/multimedia.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIRDPEDIA</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../assets/silueta.png">
+    
   </head>
   <body>
-    <header>
-      <h1>BIRDPEDIA</h1>
+    <header style="height: 120px;">
+      <h1 style="font-size: 30px; font-weight:bold; margin-top: 20px;">BIRDPEDIA</h1>
       <nav>
         <ul>
           <li><a href="../index.html">Inicio</a></li>
@@ -20,15 +23,42 @@
         </ul>
       </nav>
     </header>
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../assets/1800.jpg" alt="Los Angeles" class="d-block" style="width:100%; margin-top: 50px; height: 1000px;">
+          <div class="carousel-caption">
+            <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Colibrí Picoespada</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block" style="width:100% ; margin-top: 50px; height: 1000px;">
+          <div class="carousel-caption">
+            <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Agilucho Lagunero</p>
+          </div> 
+        </div>
+        <div class="carousel-item">
+          <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block" style="width:100% ; margin-top: 50px; height: 1000px;" >
+          <div class="carousel-caption">
+            <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Pingüino Emperador</p>
+          </div>  
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+    
+    <div class="container-fluid mt-3">  
     <main>
-        <section>
-            <h3 class="displayblock">Sonido de un Avestruz</h3>
-            <audio src="../assets/y2mate.com - SONIDO DE AVESTRUZ.mp3" controls class="display"></audio>
-            <h3 class="displayblock">Un Albatros en su hábitat natural</h3>
-            <iframe width="1204" height="711" src="https://www.youtube.com/embed/g5EIm1GKsmE" title="Los Albatros de las Islas del Frío" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="display"></iframe>
-            <h3 class="displayblock">Imagen de un Condor</h3>
-            <img src="../assets/condor.jpg" width="400px" height="400px" class="display">  
-        </section>
       </main>
       <footer>
         <p>Derechos de autor © 2023 BIRDPEDIA</p>
