Carrusel de imagenes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -262,6 +262,33 @@ body {
         left: 0;
         }
     }
-    
+    @media screen and (max-width: 600px) {
+      header {
+        height: auto;
+        text-align: center;
+        padding: 10px;
+      }
+      h1 {
+        font-size: 24px;
+        margin: 0;
+      }
+      nav {
+        margin-top: 10px;
+      }
+      .carousel-item img {
+        margin-left: 0;
+      }
+      .carousel-caption {
+        position: static;
+      }
+      .carousel-control-prev,
+      .carousel-control-next {
+        display: none;
+      }
+      footer {
+        text-align: center;
+        margin-top: 20px;
+      }
+    }
     
     
