Carrusel de imagenes

--- a/views/multimedia.html
+++ b/views/multimedia.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header style="height: 120px;">
-      <h1 style="font-size: 30px; font-weight:bold; margin-top: 20px;">BIRDPEDIA</h1>
+      <h1 style="font-weight: bold; font-size: 35px;">BIRDPEDIA</h1>
       <nav>
         <ul>
           <li><a href="../index.html">Inicio</a></li>
@@ -31,19 +31,19 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../assets/1800.jpg" alt="Los Angeles" class="d-block" style="width:90%; margin-top: 50px; height: auto; margin-left: 100px;">
+          <img src="../assets/Sword-billed_Hummingbird.jpg" alt="Los Angeles" class="d-block" style="width:auto;height:auto; margin: auto;">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Colibrí Picoespada</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block" style="width:90%; margin-top: 50px; height: auto; margin-left: 100px;">
+          <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block" style="width:auto;height:auto; margin: auto;">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Agilucho Lagunero</p>
           </div> 
         </div>
         <div class="carousel-item">
-          <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block" style="width:90%; margin-top: 50px; height: auto; margin-left: 100px;" >
+          <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block" style="width:auto;height:auto; margin: auto;" >
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Pingüino Emperador</p>
           </div>  
@@ -56,10 +56,6 @@
         <span class="carousel-control-next-icon"></span>
       </button>
     </div>
-    
-    <div class="container-fluid mt-3">  
-    <main>
-      </main>
       <footer>
         <p>Derechos de autor © 2023 BIRDPEDIA</p>
         <ul>
