--- a/views/multimedia.html
+++ b/views/multimedia.html
@@ -31,19 +31,19 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../assets/Sword-billed_Hummingbird.jpg" alt="Los Angeles" class="d-block" style="width:auto;height:auto; margin: auto;">
+          <img src="../assets/Sword-billed_Hummingbird.jpg" alt="Los Angeles" class="d-block">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Colibrí Picoespada</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block" style="width:auto;height:auto; margin: auto;">
+          <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Agilucho Lagunero</p>
           </div> 
         </div>
         <div class="carousel-item">
-          <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block" style="width:auto;height:auto; margin: auto;" >
+          <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Pingüino Emperador</p>
           </div>  
