Carrusel de imagenes

--- a/views/multimedia.html
+++ b/views/multimedia.html
@@ -30,19 +30,19 @@
         <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active" style="width:auto; height:auto; margin: auto; margin-left: 400px;">
+        <div class="carousel-item active" style="width:auto; height:auto; margin: auto;">
           <img src="../assets/Sword-billed_Hummingbird.jpg" alt="Los Angeles" class="d-block">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Colibrí Picoespada</p>
           </div>
         </div>
-        <div class="carousel-item" style="width:auto; height:auto;  margin: auto; margin-left: 350px">
+        <div class="carousel-item" style="width:auto; height:auto;  margin: auto;">
           <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Agilucho Lagunero</p>
           </div> 
         </div>
-        <div class="carousel-item" style="width:auto; height:auto;  margin: auto; margin-left: 570px">
+        <div class="carousel-item" style="width:auto; height:auto;  margin: auto;">
           <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block">
           <div class="carousel-caption">
             <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Pingüino Emperador</p>
