Carrusel de imagenes

--- a/views/multimedia.html
+++ b/views/multimedia.html
@@ -23,39 +23,42 @@
         </ul>
       </nav>
     </header>
-    <div id="demo" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active" style="width:auto; height:auto; margin: auto;">
-          <img src="../assets/Sword-billed_Hummingbird.jpg" alt="Los Angeles" class="d-block">
-          <div class="carousel-caption">
-            <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Colibrí Picoespada</p>
+    <div style="display: flex; justify-content: center;">
+      <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" style="width:auto; height:auto; margin: auto; padding: 2%;">
+            <img src="../assets/Sword-billed_Hummingbird.jpg" alt="Los Angeles" class="d-block">
+            <div class="carousel-caption">
+              <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Colibrí Picoespada</p>
+            </div>
+          </div>
+          <div class="carousel-item" style="width:auto; height:auto;  margin: auto; padding: 2%">
+            <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block">
+            <div class="carousel-caption">
+              <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Agilucho Lagunero</p>
+            </div> 
+          </div>
+          <div class="carousel-item" style="width:auto; height:auto;  margin: auto; padding: 2%;">
+            <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block">
+            <div class="carousel-caption">
+              <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Pingüino Emperador</p>
+            </div>  
           </div>
         </div>
-        <div class="carousel-item" style="width:auto; height:auto;  margin: auto;">
-          <img src="../assets/aguilucho-lagunero-macho.jpg" alt="Chicago" class="d-block">
-          <div class="carousel-caption">
-            <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Agilucho Lagunero</p>
-          </div> 
-        </div>
-        <div class="carousel-item" style="width:auto; height:auto;  margin: auto;">
-          <img src="../assets/pinguino_emperador_50_orig.jpg" alt="New York" class="d-block">
-          <div class="carousel-caption">
-            <p style="font-size: 35px; color: black; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Pingüino Emperador</p>
-          </div>  
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev" >
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev" >
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
     </div>
+    
       <footer>
         <p>Derechos de autor © 2023 BIRDPEDIA</p>
         <ul>
